# DocRAG

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: chat.py  data.py  documents.py  ingest.py  models.py  query.py  settings.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: chat.py  settings.py
backend/app/services/: chat_history_service.py  chunking_service.py  file_service.py  intent_service.py  llm_service.py  prompt_service.py  retrieval_service.py  settings_service.py  vector_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: app-sidebar.tsx  nav-session.tsx
frontend/src/components/chat/: chat-interface.tsx  chat-message-item.tsx  knowledge-base.tsx  model-selector.tsx  session-actions.tsx
frontend/src/components/settings/: ai-providers-settings.tsx  preferences-settings.tsx  rag-settings.tsx  storage-settings.tsx
frontend/src/hooks/: use-chat-store.ts  use-chat-stream.ts
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts  settings.ts
qdrant_data/: raft_state.json
reports/tests/data/documents/: docrag_api_report.docx  docrag_api_report.md  docrag_api_report.pptx  docrag_api_report.xlsx  docrag_api_spec.json  docrag_data_flow.puml  docrag_endpoints.csv  docrag_system_overview.txt  investments_data.csv  investments_report.html
(+1 files in other folders)
