[project]
name = "docrag"
version = "0.1.0"
description = "RAG system for diverse document types"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.74.0",
    "docling-core>=2.65.1",
    "fastapi>=0.129.2",
    "langchain>=1.2.10",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "uvicorn>=0.41.0",
]
